fixed header movement depending on scrollbar activation

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
 	font-family: system-ui, Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
 		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -29,16 +30,20 @@ body {
 	/* min-height: 100vh; */
 	margin: 0;
 	/* background: var(--darkmode-background-color); */
+}
 
+html {
+	overflow-y: auto;
+	/* scrollbar-gutter: stable; */
 }
 
 body::before {
 	content: '';
-	width: 80vw;
+	width: 80%;
 	height: 100vh;
 	position: absolute;
 	top: 0;
-	left: 10vw;
+	left: 10%;
 	z-index: -1;
 	/* background: radial-gradient( 50% 50% at 50% 50%, var(--pure-white) 0%, rgba(255, 255, 255, 0) 100%); */
 	opacity: 0.05;
@@ -132,4 +137,3 @@ a:hover {
 a:active {
 	text-decoration: none;
 }
-
